# UdemyCppExercises

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  Settings.md
01_Basics/CharConverter/: main.cc
01_Basics/MathCalculator/: Exercise.md  main.cc
01_Basics/TimeConverter/: Exercise.md  main.cc
02_ArrayPointer/ArrayLibrary/: Exercise.md
02_ArrayPointer/StringLibrary/: Exercise.md
02_Basics/CharConverter/: Exercise.md
02_Basics/MathCalculator/: Exercise.md
03_ArrayPointer/AlgoLib/: Exercise.md
03_ArrayPointer/AlgorithmsLIbrary/: Exercise.md
03_ArrayPointer/ArrayLibrary/: Exercise.md
03_ArrayPointer/StringLibrary/: Exercise.md
03_MoreBasics/LateralController/: AdFunctions.cc  Exercise.md
03_MoreBasics/LongitudinalController/: Exercise.md
11_GUI/AdasGui6/: CMakeLists.txt  Exercise.md
11_GUI/AdasGui6/app/: CMakeLists.txt  Cycle.cc  Main.cc  cycle.cpp
11_GUI/AdasGui6/data/: vehicle_data.json
11_GUI/AdasGui6/scripts/: data.py  heading_degree.py
11_GUI/AdasGui6/src/: AdConstants.hpp  AdFunctions.cc  AdFunctions.hpp  CMakeLists.txt  DataLoader.cc  DataLoader.hpp  MathUtil.hpp  Render.cc
11_GUI/AdasGui6/src/AutomatedDriving/: AdConstants.hpp  AdFunctions.cc  AdTypes.hpp
11_GUI/AdasGui6/src/DataLoader/: CMakeLists.txt  DataLoader.cc  DataLoaderTypes.hpp
11_GUI/AdasGui6/src/Perception/: CMakeLists.txt  Perception.cc  Perception.hpp
11_GUI/AdasGui6/src/Render/: CMakeLists.txt  Render.cc  Render.hpp  RenderConstants.hpp
11_GUI/AdasGui6/src/Util/: Units.hpp
utils/: distance.hpp  string_utils.hpp  utils.h  utils.hpp
(+444 files in other folders)
